--- a/css/theme/nfq.css
+++ b/css/theme/nfq.css
@@ -282,7 +282,8 @@ body {
     margin-right: .75em; }
 
 .reveal pre {
-  line-height: 1.5; }
+  line-height: 1.5;
+  font-size: 1em; }
   .reveal pre::before {
     background-color: #f2f2f2;
     border-top-left-radius: 2px;
